fix api and actor
